fixed screenshot generation

--- a/mrShortener/templates/mrShortener/index.html
+++ b/mrShortener/templates/mrShortener/index.html
@@ -3,23 +3,49 @@
   <head>
     <title>clean.URL: Because Clean is Sexy</title>
     <style type="text/css">
+      body{
+      font-family:helvetica,arial,sans serif;
+      }
+
       #logo{
       width:401px;
       height:131px;
       margin:0 auto;
       position:relative;
+      padding-top:30px;
       }
+
       #urlInput{
-      width:450px;
+      width:50%;
       height:200px;
-      margin:0 auto;
-      position:relative;
-      margin-top:150px;
+      position:absolute;
+      top:50%;
+      left:50%;
+      margin-left:-350px;
+      margin-top:-10px;
+      }
+  
+
+      input{
+      border:solid black 1px;
+      
+      padding:6px 4px 6px 4px;
+      font-size:30px;
+      border-radius:4px;
+      }
+      
+      p{
+      display:inline;
+      }
+      #id_submitForm{
+      width:70%;
+      text-align:center;
+      margin-left:35px;
       }
       #btn{
-      float:right;
-      margin-right:45px;
+      width:20%;
       }
+     
       
     </style>
   </head>
