--- a/mrShortener/templates/mrShortener/results.html
+++ b/mrShortener/templates/mrShortener/results.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
 	<head>
 		<title>clean.URL</title>
 		<style type="text/css">
@@ -154,7 +154,7 @@
 	<body onload="setup()">
 		<div id="mainContainer">
 			<div id="logo">
-				<img src="/media/cleanURL.jpg"/>
+				<img src="{{ MEDIA_URL }}cleanURL.jpg"/>
 			</div>
 			
 			<div id="url">
